# quack

./: .gitignore  BUILD.md  LICENSE  README.md  build.gradle  settings.gradle
.github/workflows/: download_artifact.sh  gh-pages.yml  quickjs.yml
CI/: download_artifact.sh
config/: license.txt
native/: CMakeLists.txt  build.bat  build.sh  download-tools.bat
native/quickjs/: QuickJSContext.cpp  QuickJSContext.h
native/quickjs/doc/: texi2md.sh
quack-android/: build.gradle  maven.gradle
quack-android/src/main/java/com/koushikdutta/quack/: QuackJniLoader.java
quack-android/src/main/jni/: CMakeLists.txt
quack-java/: build.gradle  maven.gradle
quack-java/src/main/java/com/koushikdutta/quack/: Extensions.kt  JavaScriptList.java  JavaScriptMap.java  JavaScriptObject.java  QuackAsyncCaller.java  QuackCoercions.java  QuackContext.java  QuackException.java  QuackFuture.java  QuackPromise.java  WeakExactHashMap.java
quack-java/src/test/java/com/koushikdutta/quack/: QuackCoercionsTest.java  QuackExceptionTest.java  TestQuack.java  TestQuackKotlin.kt  TestWeakExactHashMap.java
quack-jni/: build.gradle  maven.gradle
quack-jni/src/main/java/com/koushikdutta/quack/: QuackJniLoader.java
serialization/: .editorconfig  build.gradle  maven.gradle
serialization/src/main/java/com/github/uk_taniyama/quack/serialization/: QuackConverter.kt  QuackDecoder.kt  QuackEncoder.kt
serialization/src/test/java/com/github/uk_taniyama/quack/serialization/: Data.kt  QuackConverterTest.kt
